--- a/.gitignore
+++ b/.gitignore
@@ -120,9 +120,7 @@ DerivedData/
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
 .idea/**/tasks.xml
-.idea/**/dictionaries
 .idea/**/shelf
 
 # Sensitive or high-churn files
@@ -168,3 +166,4 @@ fabric.properties
 
 # Editor-based Rest Client
 .idea/httpRequests
+.idea
